css fixes and tweaks
made scrollbar darker to see it better and made sure overflowing text on the contentbar would break instead of overflowing

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: roboto;
-    src: url(fonts/Roboto-Thin.ttf);
+  src: url(fonts/Roboto-Thin.ttf);
 }
 
 body {
@@ -8,10 +8,10 @@ body {
   user-select: none;
 }
 
-#codex p, span {
+#codex p,
+span {
   font-family: roboto;
 }
-
 
 #codex {
   width: 1200px;
@@ -25,6 +25,7 @@ body {
 }
 
 #contentScroller {
+  display: block;
   width: 270px;
   height: 700px;
   background-color: rgb(133, 23, 23);
@@ -32,9 +33,11 @@ body {
   right: 0px;
   top: 10px;
   box-shadow: inset 0 0 16px 16px rgb(68, 7, 7), 0 0 8px 8px rgb(92, 22, 22);
+  overflow: hidden;
+  overflow-y: auto;
 }
 
-#contentScroller >p:first-child {
+#contentScroller > p:first-child {
   margin-top: 55px;
 }
 
@@ -48,7 +51,8 @@ body {
   box-shadow: inset 0 0 16px 16px rgb(68, 7, 7);
 }
 
-#contentSearchbutton, #contentSearchtagtoggle {
+#contentSearchbutton,
+#contentSearchtagtoggle {
   transition: 0.1s;
   width: 40px;
   height: 40px;
@@ -70,7 +74,6 @@ body {
   right: 0px;
 }
 
-
 #contentSearchfield {
   height: 35px;
   width: 175px;
@@ -85,7 +88,6 @@ body {
   text-shadow: 0 0 6px black;
 }
 
-
 #content {
   width: 910px;
   height: 700px;
@@ -96,7 +98,11 @@ body {
   overflow-y: auto;
 }
 
-.CodexCategories, .CodexArrows, .CodexArrowsSmall, .CodexSubcategories, .CodexEntities {
+.CodexCategories,
+.CodexArrows,
+.CodexArrowsSmall,
+.CodexSubcategories,
+.CodexEntities {
   color: silver;
   text-shadow: 0 0 10px black;
   margin: 5px;
@@ -131,7 +137,6 @@ body {
   font-size: 20px;
   position: relative;
   cursor: pointer;
-  width: max-content;
 }
 
 .PointerClass {
@@ -165,12 +170,12 @@ body {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgb(85, 85, 85);
+  background: rgb(34, 34, 34);
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgb(54, 54, 54);
+  background: rgb(20, 20, 20);
 }
 
 .TextIconClass {
@@ -184,7 +189,8 @@ body {
   top: 80px;
 }
 
-#CodexBaseText p, span {
+#CodexBaseText p,
+span {
   user-select: all !important;
   font-size: 30px;
   color: silver;
@@ -254,8 +260,8 @@ body {
   margin-left: -25px;
 }
 
-
-.hpbarbg, .mpbarbg {
+.hpbarbg,
+.mpbarbg {
   width: 128px;
   height: 23px;
   border: 2px solid black;
@@ -276,7 +282,8 @@ body {
   white-space: nowrap;
 }
 
-.hpbarfill, .mpbarfill {
+.hpbarfill,
+.mpbarfill {
   left: 155px;
   height: 23px;
   position: absolute;
@@ -331,7 +338,7 @@ body {
 }
 
 .ui_button:hover {
-  transform: scale(1.05)
+  transform: scale(1.05);
 }
 
 #settings {
@@ -453,7 +460,8 @@ body {
   top: 2px;
 }
 
-#yesAlert, #noAlert {
+#yesAlert,
+#noAlert {
   transition: 0.1s;
   background-color: rgb(145, 137, 137);
   border: none;
@@ -469,12 +477,14 @@ body {
   outline: none;
 }
 
-#yesAlert:hover, #noAlert:hover {
+#yesAlert:hover,
+#noAlert:hover {
   bottom: 20px;
   box-shadow: 0 2px 4px 4px rgb(80, 79, 79), inset 0 0 4px 4px rgb(131, 121, 121);
 }
 
-#yesAlert:active, #noAlert:active {
+#yesAlert:active,
+#noAlert:active {
   bottom: 18px;
   box-shadow: 0 0px 4px 4px rgb(80, 79, 79), inset 0 0 4px 4px rgb(131, 121, 121);
 }
@@ -562,7 +572,7 @@ body {
 
 #infoBox {
   transition: 0.2s;
-  transform: scale(1.0);
+  transform: scale(1);
   width: 425px;
   height: fit-content;
   position: absolute;
@@ -575,7 +585,8 @@ body {
   z-index: 2;
 }
 
-#infoBox p, span {
+#infoBox p,
+span {
   color: white;
   font-size: 27px;
   font-family: roboto;
@@ -623,7 +634,8 @@ body {
   padding: 0px;
 }
 
-#armorFrame div, #weaponFrame div {
+#armorFrame div,
+#weaponFrame div {
   transition: 0.1s;
   width: 135px;
   height: 140px;
@@ -635,11 +647,14 @@ body {
   position: absolute;
 }
 
-#armorFrame div:hover, #weaponFrame div:hover, #ringFrame div:hover {
+#armorFrame div:hover,
+#weaponFrame div:hover,
+#ringFrame div:hover {
   border: 6px solid rgb(44, 44, 44);
 }
 
-#armorFrame p, #weaponFrame p {
+#armorFrame p,
+#weaponFrame p {
   font-size: 26px;
   font-family: roboto;
   color: silver;
@@ -793,7 +808,7 @@ body {
 #timeFrame p {
   color: white;
   text-shadow: 0 2px 6px rgb(0, 0, 0);
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   position: absolute;
 }
 
